syntax = "proto3";

option go_package = "pb/game";

import "google/protobuf/empty.proto";
option cc_generic_services = true;

message Centre2GsLoginRequest
{
  uint32 enter_gs_type = 1;
}

service GamePlayerService 
{
  rpc Centre2GsLogin (Centre2GsLoginRequest) returns (google.protobuf.Empty);
}